--- a/public/login.html
+++ b/public/login.html
@@ -13,18 +13,18 @@
         <h3>Fill in this form to login</h3>
         <form id="main-form" method="post">
             <label for="email">Email Adress</label>
-            <input type="text" name="email" placeholder="Email" id="formLoginEmail">
+            <input type="text" name="email" placeholder="Email" id="form-login-email">
             <div id="loginErrorEmail" class="hidden">
                 <p>E-mail must have a valid format</p>
             </div>
             <label for="password">Password</label>
-            <input type="password" name="password" placeholder="Password" id="formLoginPassword">
+            <input type="password" name="password" placeholder="Password" id="form-login-password">
             <div id="loginErrorPassword" class="hidden">
                 <p>Password must have the correct format</p>
             </div> 
-            <button type="submit" name="submit" id="loginButton">Login</button>
+            <button type="submit" name="submit" id="login-button">Login</button>
             <button type="reset" name="reset" id="reset-login-button">Reset</button>
-            <p>Create an acount!<a href="register.html" rel="noopener noreferrer" id="goToRegisterForm">Register Now!</a></p>
+            <p>Create an acount!<a href="register.html" rel="noopener noreferrer" id="go-to-register-form">Register Now!</a></p>
         </form>
         <div id="error-log-container" class="hidden">
             <h2>Validation report: </h2>
