--- a/public/register.html
+++ b/public/register.html
@@ -14,27 +14,27 @@
         <h3>Fill in this form to register.</h3>
         <form id="main-form">
             <label for="full-name">Full Name</label>
-            <input type="text" name="full-name" placeholder="Full Name" id="formRegisterName">            
-            <div id="registerErrorname" class="hidden">
+            <input type="text" name="full-name" placeholder="Full Name" id="form-register-name">            
+            <div id="register-error-name" class="hidden">
                 <p>Name must be at least 6 characters long and have a space</p>
             </div>
             <label for="email">Email Adress</label>
-            <input type="text" name="email" placeholder="Email" id="formRegisterEmail">
-            <div id="registerErrorEmail" class="hidden">
+            <input type="text" name="email" placeholder="Email" id="form-register-email">
+            <div id="register-error-email" class="hidden">
                 <p>E-mail must have a valid format</p>
             </div>
             <label for="password">Password</label>
-            <input type="password" name="password" placeholder="Password" id="formRegisterFirstPassword">
-            <div id="registerErrorFirstPassword" class="hidden">
+            <input type="password" name="password" placeholder="Password" id="form-register-first-password">
+            <div id="register-error-first-password" class="hidden">
                 <p>Password must have the correct format</p>
             </div>
             <label for="confirm-password">Confirm Password</label>
-            <input type="password" name="confirm-password" placeholder="Confirm Password" id="formRegisterSecondPassword">
-            <div id="registerErrorSecondPassword" class="hidden">
+            <input type="password" name="confirm-password" placeholder="Confirm Password" id="form-register-second-password">
+            <div id="register-error-second-password" class="hidden">
                 <p>Passwords must have the correct format and match</p>
             </div>
-            <button type="submit" name="submit" id="submitButton">Submit</button>
-            <button type="reset" name="reset" id="resetFieldsButton">Reset</button>
+            <button type="submit" name="submit" id="submit-button">Submit</button>
+            <button type="reset" name="reset" id="reset-fields-button">Reset</button>
             <p>Already have an acount?<a href="login.html">Login!</a></p>
         </form>
         <div id="error-log-container" class="hidden">
