--- a/public/login.html
+++ b/public/login.html
@@ -14,12 +14,12 @@
         <form id="main-form" method="post">
             <label for="email">Email Adress</label>
             <input type="text" name="email" placeholder="Email" id="form-login-email">
-            <div id="loginErrorEmail" class="hidden">
+            <div id="login-error-email" class="hidden">
                 <p>E-mail must have a valid format</p>
             </div>
             <label for="password">Password</label>
             <input type="password" name="password" placeholder="Password" id="form-login-password">
-            <div id="loginErrorPassword" class="hidden">
+            <div id="login-error-password" class="hidden">
                 <p>Password must have the correct format</p>
             </div> 
             <button type="submit" name="submit" id="login-button">Login</button>
