correction of error in login.

--- a/public/login.html
+++ b/public/login.html
@@ -24,7 +24,7 @@
             </div> 
             <button type="submit" name="submit" id="login-button">Login</button>
             <button type="reset" name="reset" id="reset-login-button">Reset</button>
-            <p>Create an acount!<a href="register.html" rel="noopener noreferrer" id="go-to-register-form">Register Now!</a></p>
+            <p>Create an acount!<a href="register.html" rel="noopener noreferrer" id="back-to-register">Register Now!</a></p>
         </form>
         <div id="error-log-container" class="hidden">
             <h2>Validation report: </h2>
